--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -3,25 +3,29 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Gana Gana App</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-    <img src="assets/images/logo2.png"/>
-    <p>Bienvenido a la app de Gana Gana, Crea una cuenta para empezar a disfrutar todos nuestros beneficios para ti</p> 
+  <div class="imagen">
+    <img src="assets/images/logo2.png" />
+  </div>
+  <p>Completa el siguiente formulario para crear tu cuenta GanaGana App</p>
 
   <div class="form-container">
-    <span class="error" *ngIf="error" >{{ error }}</span>
+    <span class="error" *ngIf="error">{{ error }}</span>
     <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
       <ion-item>
-        <ion-input type="text" placeholder="Email..." (ngModel)="email" name="email" class="txt" required> </ion-input>
+        <ion-label stacked>Email</ion-label>
+        <ion-input type="text" placeholder="example@mail.com" (ngModel)="email" name="email" class="txt" required> </ion-input>
       </ion-item>
       <ion-item>
-       <ion-input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required> </ion-input>
+        <ion-label stacked>Password</ion-label>
+        <ion-input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required> </ion-input>
       </ion-item>
       <button ion-button block outline type="submit" [disabled]="!formData.valid" class="basic-btn">Crear mi cuenta</button>
-      </form>
+    </form>
   </div>
 </ion-content>
