--- a/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.html
+++ b/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.html
@@ -1,18 +1,28 @@
-<!--
-  Generated template for the Kitsuertewin page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>kitsuertewin</ion-title>
+    <ion-title>Eres Un Ganador!</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content padding>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col width-100>
+        <div class="card-title"><h1>¡Has Obtenido todos los Amuletos!</h1></div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col width-30>
+        <img src="assets/images/copaGanador.png">
+      </ion-col>
+      <ion-col width-70>
+        <div class="card-subtitle">Nos contactaremos contigo proximamente</div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 
 </ion-content>
