--- a/src/pages/kitdelasuerte/kitdelasuerte.html
+++ b/src/pages/kitdelasuerte/kitdelasuerte.html
@@ -2,8 +2,8 @@
   <ion-navbar>
     <ion-title>Kit de la Suerte</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only [navPush]="instructionsRoot">
-        <ion-icon name="help" ></ion-icon>
+      <button ion-button icon-only (click)="openPopover($event)">
+        <ion-icon name="more" ></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
