detalles: correccion de pequeños detalles css

--- a/src/pages/kitdelasuerte/complete-info/complete-info.html
+++ b/src/pages/kitdelasuerte/complete-info/complete-info.html
@@ -21,7 +21,7 @@
       <ion-icon name="alert"></ion-icon>
     </ion-card-header>
     <ion-card-content>
-      <p>
+      <p class="descripcion">
         Para poder participar en este juego, primero debes actualizar tu informacion personal. Recuerda no dejar espacios en blanco
       </p>
 
