--- a/src/pages/instrucciones/instrucciones.html
+++ b/src/pages/instrucciones/instrucciones.html
@@ -6,9 +6,12 @@
 <ion-content>
 
       <ion-item color="ganagana"> Instrucciones </ion-item>
-      <p> Al principio de la partida, todas las cartas tendrán que estar boca abajo.</p>
-      <p> El jugador voltea 2 cartas, en caso de ser diferentes el juego las vuelve a esconder.</p>
-      <p> Ahora el jugador debe voltear otras 2 cartas, sí son iguales, el jugador ha hecho una pareja.</p>
-      <p> El jugador gana la opción de volver a jugar volteando otras 2 cartas.</p>
-      <p> El jugador gana cuando haya encontrado todas las parejas.</p>
+      <ol>
+        <li>  <p>Al principio de la partida, todas las cartas tendrán que estar boca abajo.</p></li>
+        <li>  <p>El jugador voltea 2 cartas, en caso de ser diferentes el juego las vuelve a esconder.</p></li>
+        <li>  <p>Ahora el jugador debe voltear otras 2 cartas, sí son iguales, el jugador ha hecho una pareja.</p></li>
+        <li>  <p>El jugador gana la opción de volver a jugar volteando otras 2 cartas.</p></li>
+        <li>  <p>El jugador gana cuando haya encontrado todas las parejas.</p></li>
+      </ol>
+
 </ion-content>
