--- a/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.html
+++ b/src/pages/kitdelasuerte/kitsuertewin/kitsuertewin.html
@@ -23,6 +23,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <button ion-button block (click)="volverAlHome()">Regresar</button>
 
 
 </ion-content>
