--- a/src/pages/astrologia/astrologia.html
+++ b/src/pages/astrologia/astrologia.html
@@ -21,7 +21,7 @@
       </ion-item>
       <ion-item>
         <ion-label>Fecha de nacimiento</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY" name="date" [(ngModel)]="infoUser.date_of_birth" formControlName="fechaNacimiento" doneText="ok"></ion-datetime>
+        <ion-datetime displayFormat="MMM DD, YYYY" name="date" [(ngModel)]="infoUser.date_of_birth" formControlName="fechaNacimiento" doneText="ok" monthShortNames="Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Sep, Oct, Nov, Dic"></ion-datetime>
       </ion-item>
       <ion-item>
         <ion-label>Hora de nacimiento</ion-label>
