--- a/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.html
+++ b/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.html
@@ -30,7 +30,11 @@
       </ion-card-header>
       <ion-card-content>
         <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, ducimus. Harum molestias nostrum fugit obcaecati, id quos architecto repudiandae, vero asperiores! Sint, repellat, blanditiis. Minima doloremque saepe obcaecati iste in!
+              Ganar éste juego es muy fácil, lo único que debes hacer es acercarte a cualquiera de nuestros puntos GanaGana 
+y escanear con tu celular el código QR en los posters promocionales de nuestra app, así capturarás un amuleto 
+de la suerte, debes capturar todos los amuletos que están distribuidos en distintos puntos de la ciudad, una 
+vez hayas capturado todos los amuletos serás el feliz ganador de "1.000 millones de pesos". ¡Ánimo! Sal y 
+captura todos los amuletos.
         </p>
       </ion-card-content>
     </ion-card>
