--- a/src/pages/astroresultados/astroresultados.html
+++ b/src/pages/astroresultados/astroresultados.html
@@ -25,7 +25,7 @@
             <ion-row>
                 <ion-col width-100>
                     <h1 class=numero >
-                     {{numrandom}}
+                     {{unixDate}}
                     </h1>
                 </ion-col>
             </ion-row>
