--- a/src/pages/armaparejas/armaparejas.html
+++ b/src/pages/armaparejas/armaparejas.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-tabs>
-  <ion-tab color="dark" [root]="instruccionesPage" tabTitle="Instrucciones" tabIcon="help"></ion-tab>
-  <ion-tab color="dark" [root]="armaparejagamePage" tabTitle="Jugar" tabIcon="play"></ion-tab>
+<ion-tabs tabsHighlight="true">
+  <ion-tab [root]="instruccionesPage" tabTitle="Instrucciones" tabIcon="help"></ion-tab>
+  <ion-tab [root]="armaparejagamePage" tabTitle="Jugar" tabIcon="play"></ion-tab>
 </ion-tabs>
