--- a/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.html
+++ b/src/pages/kitdelasuerte/kit-suerte-popover/kit-suerte-popover.html
@@ -47,5 +47,5 @@ captura todos los amuletos.
     <ion-item>Restantes<div item-right>{{amuletosRestantes}}</div></ion-item>
     <!--Opciones avanzadas-->
     <ion-item-divider color="ganagana">Juego</ion-item-divider>
-    <ion-item (click)="showConfirmReset()">Reiniar</ion-item>
+    <ion-item (click)="showConfirmReset()">Reiniciar</ion-item>
   </ion-item-group>
