--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
       <ion-input type="text" formControlName="email" [(ngModel)]="usuario.email" placeholder="ejemplo@mail.com" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked>contraseña</ion-label>
+      <ion-label stacked>Contraseña</ion-label>
       <ion-input type="password" formControlName="contraseña" [(ngModel)]="usuario.password" placeholder="Contraseña" required></ion-input>
     </ion-item>
     <button ion-button block type="submit" [disabled]="!todo.valid">Ingresar</button>
