portafolio: Listo para usar solo un link roto y viene de la pagina

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,22 +22,16 @@
     
       <ion-slides class= "myslides" speed="2000" autoplay="1000" loop="true">
       <ion-slide>
-        <img src="assets/images/bannerganagana.png"/>
+        <img src="assets/images/somos.jpeg"/>
       </ion-slide>
       <ion-slide>
-        <img src="assets/images/recargas.jpg"/>
+        <img src="assets/images/recargas.jpeg"/>
       </ion-slide>
       <ion-slide>
-        <img src="assets/images/todoenunsololugar.jpg"/>
+        <img src="assets/images/ganatriqui.jpg"/>
       </ion-slide>
       <ion-slide>
-        <img src="assets/images/1bannertranajre.jpg"/>
-      </ion-slide>
-      <ion-slide>
-        <img src="assets/images/bancobogota.jpg"/>
-      </ion-slide>
-      <ion-slide>
-        <img src="assets/images/yo_quiero_migiroseguro.jpg"/>
+        <img src="assets/images/matriculamercantil.jpg"/>
       </ion-slide>
   </ion-slides>
 
@@ -56,12 +50,12 @@
 
     <ion-col width-50 class= "mycol">
       <button ion-button icon-only class= "ion-buttonic" block type="button" 
-      [navPush]="numerologiaPage">
+      [navPush]="potafolioServiciosPage">
          <ion-icon name="grid" class= "myicon"></ion-icon>
       </button>
         <button ion-button block type="button" 
-      [navPush]="numerologiaPage">
-          Numerología
+      [navPush]="potafolioServiciosPage">
+          Portafolio
         </button>
     </ion-col>
   </ion-row>
