--- a/src/pages/resultados/resultados.html
+++ b/src/pages/resultados/resultados.html
@@ -12,8 +12,7 @@
 
   <h3>Resultados</h3>
 
-    <button ion-button block type="button" icon-right
-    onclick="window.open('http://www.ganagana.com.co/index.php/resultados/resultados-loterias-y-sorteos')">
+    <button ion-button block type="button" icon-right (click)="redirectTo()">
     <ion-icon name="pulse" ></ion-icon>
     Resultados
     </button>
